<resources>
    <string name="app_name">Surfaces</string>
    <string name="lado">Side</string>
    <string name="apotema">Apothem</string>
    <string name="base">Base</string>
    <string name="radio">Radius</string>
    <string name="basesuperior">Top Base</string>
    <string name="altura">Height</string>
    <string name="boton">Calculate</string>
    <string name="resultado">XXX</string>
    <string name="rectangulo" translatable="false">rectangulo</string>
    <string name="triangulo" translatable="false">triangulo</string>
    <string name="pentagono" translatable="false">pentagono</string>
    <string name="hexagono" translatable="false">hexagono</string>
    <string name="trapecio" translatable="false">trapecio</string>
    <string name="circulo" translatable="false">circulo</string>
</resources>