<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.SupTrapecio">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="142dp"
        android:layout_height="98dp"
        android:layout_marginTop="@dimen/FiguraSuperior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trapecio" />

    <EditText
        android:id="@+id/etxtAlturaTrapecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Distancia2Pantalla"
        android:ems="10"
        android:hint="@string/altura"
        android:inputType="number"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/etxtBaseTrapecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Distancia2Pantalla"
        android:ems="10"
        android:hint="@string/base"
        android:inputType="number"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtAlturaTrapecio" />

    <EditText
        android:id="@+id/etxtBaseSuperiorTrapecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Distancia2Pantalla"
        android:ems="10"
        android:hint="@string/basesuperior"
        android:inputType="number"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtBaseTrapecio" />

    <TextView
        android:id="@+id/txtAreaTrapecio"
        style="@style/resultado"
        android:layout_marginTop="@dimen/Distancia2Pantalla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtBaseSuperiorTrapecio" />

    <Button
        android:id="@+id/btnCalcularTrapecio"
        style="@style/boton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>